Better generate OpenApi Yaml.
