# src/Entity/Portfolio/HousingStock.php
@@ -21,11 +21,32 @@ use Doctrine\Common\Collections\Collection;
  */
 class HousingStock extends IdTimeIdentification
 {
-
     /**
      * @ORM\OneToMany(targetEntity="Block", mappedBy="housingStock", cascade={"remove"}, fetch="EXTRA_LAZY")
+     *
+     * @OA\Property()
      */
     protected Collection $blocks;
+
+    /**
+     * @ORM\OneToMany(targetEntity="BuildingType", mappedBy="housingStock", cascade={"remove"}, fetch="EXTRA_LAZY")
+     */
+    protected Collection $buildingTypes;
+
+    /**
+     * @ORM\OneToMany(targetEntity="LivingType", mappedBy="housingStock", cascade={"remove"}, fetch="EXTRA_LAZY")
+     */
+    protected Collection $livingTypes;
+
+    /**
+     * @ORM\OneToMany(targetEntity="BuildingAddress", mappedBy="housingStock", fetch="EXTRA_LAZY")
+     */    
+    protected Collection $buildingAddresses;
+
+    /**
+     * @ORM\OneToOne(targetEntity="HousingStockOptionSet", cascade={"remove"}, mappedBy="housingStock")
+     */
+    protected HousingStockOptionSet $housingStockOptionSet;
 
     /**
      * @ORM\Column(type="integer")
@@ -62,26 +83,6 @@ class HousingStock extends IdTimeIdentification
      * @OA\Property()
      */
     protected int $numberOfBuildingAddresses = 0;
-
-    /**
-     * @ORM\OneToMany(targetEntity="BuildingType", mappedBy="housingStock", cascade={"remove"}, fetch="EXTRA_LAZY")
-     */
-    protected Collection $buildingTypes;
-
-    /**
-     * @ORM\OneToMany(targetEntity="LivingType", mappedBy="housingStock", cascade={"remove"}, fetch="EXTRA_LAZY")
-     */
-    protected Collection $livingTypes;
-
-    /**
-     * @ORM\OneToMany(targetEntity="BuildingAddress", mappedBy="housingStock", fetch="EXTRA_LAZY")
-     */    
-    protected Collection $buildingAddresses;
-
-    /**
-     * @ORM\OneToOne(targetEntity="HousingStockOptionSet", cascade={"remove"}, mappedBy="housingStock")
-     */
-    protected HousingStockOptionSet $housingStockOptionSet;
 
     #[Pure]
     public function __construct()
